copyright fix color contrast

--- a/style/style.scss
+++ b/style/style.scss
@@ -98,7 +98,7 @@ form {
 }
 
 .copyright {
-    color: $gray;
+    color: #595959;
     font-size: .7em;
 }
 
